--- a/nosotros.html
+++ b/nosotros.html
@@ -14,18 +14,17 @@
 <body>
     <header class="header">
         <a href="index.html"> <!--Enlaces-->
-            <img class="header__logo" src="img/logo.png" alt="Logotipo"> <!--Con esto logro que el logotipo me dirija de nuevo a la pagina de inicio-->
+            <img class="header__logo" src="img/logo.png" alt="Logotipo">
         </a>
     </header>
 
     <nav class="navegacion">
-        <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Tienda</a> <!--Se usa -- para decir que es un modificador, voy a usar lo demás
-        pero este se diferencia en algo en especial-->
-        <a class="navegacion__enlace" href="nosotros.html">Nosotros</a> <!--Si aún no tengo los enlaces puedo poner # para que salgan en el diseño-->
+        <a class="navegacion__enlace" href="index.html">Tienda</a> 
+        <a class="navegacion__enlace navegacion__enlace--activo" href="nosotros.html">Nosotros</a>
     </nav>
 
     <main class="contenedor">
-        <h1>Nuestros Productos</h1>
+        <h1>Nosotros</h1>
     </main>
 
     <footer class="footer">
