--- a/productos.html
+++ b/productos.html
@@ -25,7 +25,7 @@
     </nav>
 
     <main class="contenedor">
-        <h1>Nuestros Productos</h1>
+        <h1>Producto</h1>
     </main>
 
     <footer class="footer">
