posicionando nuevas camisas y terminando de dar estilos

--- a/index.html
+++ b/index.html
@@ -154,7 +154,11 @@
                     </div>
                 </a>
             </div> <!--Fin clase producto-->
-        </div>
+            <div class="grafico grafico--camisas"> <!--Esta clase la coloco con el modificador siguiendo la metodología BEM eso quiere decir
+            que camisas tendrá el mismo codigo que grafico pero con una leve variación-->
+            </div>
+            <div class="grafico grafico--nodeJs"></div>
+        </div> <!--Fin clase grid-->
     </main>
 
     <footer class="footer">
