Modificando la sección nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -25,6 +25,25 @@
 
     <main class="contenedor">
         <h1>Nosotros</h1>
+
+        <div class="nosotros">
+            <div class="nosotros__contenido">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo odio adipisci tenetur vitae hic architecto 
+                    doloremque nam quae ex ab eius, commodi minima alias quisquam facilis illo sed. Ex iure est ad eos maiores 
+                    pariatur, minus nihil eum deserunt suscipit voluptate necessitatibus eius voluptatibus fuga et dolore. 
+                    Blanditiis earum facilis sint, est voluptatem laboriosam quam ullam explicabo dolorum assumenda atque accusantium, 
+                    illum animi itaque corporis aut.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, atque odio? Magni unde neque corrupti tenetur ipsum 
+                    natus laboriosam non esse hic accusamus, obcaecati fugit mollitia veritatis dignissimos quod autem.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi nesciunt, adipisci hic unde optio tempora odio atque, 
+                    earum odit voluptatibus illum! Dolores repellendus, nesciunt saepe quo animi ipsum explicabo blanditiis.
+                </p>
+            </div>
+            <img class="nosotros__imagen" src="img/nosotros.jpg" alt="imagen nosotros">
+        </div>
     </main>
 
     <footer class="footer">
