Terminando modificación en la pagina nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -43,8 +43,49 @@
                 </p>
             </div>
             <img class="nosotros__imagen" src="img/nosotros.jpg" alt="imagen nosotros">
-        </div>
+        </div> <!--Fin clase nosotros-->
     </main>
+
+    <section class="contenedor comprar">
+        <h2 class="comprar__titulo">¿Porqué comprar con nosotros?</h2>
+        <div class="bloques">
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_1.png" alt="porque comprar">
+                <h3 class="bloque__titulo">El mejor precio</h3>
+                <p>
+                    Commodi nesciunt, adipisci hic unde optio tempora odio atque, 
+                    earum odit voluptatibus illum! Dolores repellendus, nesciunt saepe quo animi ipsum explicabo blanditiis.
+                </p>
+            </div> <!--Fin clase bloque-->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_2.png" alt="porque comprar">
+                <h3 class="bloque__titulo">Para Devs</h3>
+                <p>
+                    Commodi nesciunt, adipisci hic unde optio tempora odio atque, 
+                    earum odit voluptatibus illum! Dolores repellendus, nesciunt saepe quo animi ipsum explicabo blanditiis.
+                </p>
+            </div> <!--Fin clase bloque-->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_3.png" alt="porque comprar">
+                <h3 class="bloque__titulo">Envío gratis</h3>
+                <p>
+                    Commodi nesciunt, adipisci hic unde optio tempora odio atque, 
+                    earum odit voluptatibus illum! Dolores repellendus, nesciunt saepe quo animi ipsum explicabo blanditiis.
+                </p>
+            </div> <!--Fin clase bloque-->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_4.png" alt="porque comprar">
+                <h3 class="bloque__titulo">La mejor calidad</h3>
+                <p>
+                    Commodi nesciunt, adipisci hic unde optio tempora odio atque, 
+                    earum odit voluptatibus illum! Dolores repellendus, nesciunt saepe quo animi ipsum explicabo blanditiis.
+                </p>
+            </div> <!--Fin clase bloque-->
+        </div> <!--Fin clase bloques-->
+    </section>
 
     <footer class="footer">
         <p class="footer__texto">Frontend Store - Todos los derechos reservados 2022</p>
