--- a/productos.html
+++ b/productos.html
@@ -34,15 +34,15 @@
                     similique, omnis optio sit autem consequuntur praesentium ullam illum nihil tempora saepe minima.
                 </p>
                 <form class="formulario">
-                    <select>
+                    <select class="formulario__campo">
                         <option disabled selected>-- Seleccionar talla --</option> <!--Option tiene sus atributos, disabled para deshabilitar
                         el poder elegir esta opción y selected para que sea esta opción la que se muestre-->
                         <option value="">Chica</option>
                         <option value="">Mediana</option>
                         <option value="">Grande</option>
-                        <input type="number" placeholder="Cantidad" min="1"> <!--Placeholder para mostrar un texto en el campo y min para
+                        <input class="formulario__campo" type="number" placeholder="Cantidad" min="1"> <!--Placeholder para mostrar un texto en el campo y min para
                         elegir desde donde puede comenzar a elegir la persona-->
-                        <input type="submit" value="Agregar al carrito">
+                        <input class="formulario__submit" type="submit" value="Agregar al carrito">
                     </select>
                 </form>
             </div> <!--Fin clase camisa__contenido-->
